examples/test/testpolicy8337.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8337
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key20: value46
      key22: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value14
          key2: value32
      podSelector:
        matchLabels:
          key36: value35
          key19: value36
          key13: value0
